# practicum_profile_API

./: .auth.env.example  .gitignore  .pre-commit-config.yaml  .ugc.env.development.example  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.like-ugc.yml  docker-compose.movies-api.yml  docker-compose.tests.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  setup.cfg
.github/scripts/: run-pytest-if-exist.sh
.github/workflows/: python.yml
elk_deploy/: filebeat.yml  logstash.conf
nginx/: nginx.conf  site.conf
nginx/conf.d/: site.conf
src/: Dockerfile  main.py
src/api/v1/: bookmark.py  like.py  movie.py  review.py  user.py  watch_progress.py
src/auxiliary_services/: cache_service.py  data_aggregation.py  message_broker.py  movie_search.py  ugc_handler.py
src/core/: decorators.py  exceptions.py  logger.py  settings.py
src/db_models/: bookmark.py  like.py  mongo_base_model.py  review.py  user.py  watch_progress.py
src/dependencies/: auth.py  kafka.py  mongo.py  movie.py  redis.py
src/endpoint_services/: bookmark.py  like.py  review.py  user.py  watch_progress.py
src/external_api/: auth.py  movie.py
src/models/: movie.py  movie_progress.py  review.py  user.py
src/project_utilities/: async_session.py  backoff.py  kafka_admin.py
src/rate_limit/: token_bucket.py
src/services/: cache_service.py  data_aggregation.py  movie_search.py
src/utils/: async_session.py
tests/: __init__.py  conftest.py  settings.py
tests/debugging/: basic_user_scenario.py  http_client.py
tests/functional/: settings.py
(+29 files in other folders)
