[tool.poetry]
name = "practicum-profile-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic-settings = "2.1.0"
pydantic = "2.5.2"
pydantic-core = "2.14.5"
email-validator = "2.1.0"
uvicorn = "0.24.0"
orjson = "3.9.10"
motor = "3.3.2"
pymongo = "4.6.1"
aiokafka = "0.9.0"
kafka-python = "2.0.2"
redis = "5.0.1"
tenacity = "8.2.3"
aiohttp = "3.9.1"
fastapi = "0.104.1"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "3.5.0"
mypy = "1.7.1"
wemake-python-styleguide = "0.18.0"
isort = "5.12.0"
ipython = "^8.18.1"


[tool.poetry.group.tests.dependencies]
sqlalchemy = "^2.0.23"
pytest-aiohttp = "^1.0.5"
pytest-asyncio = "^0.23.2"
python-jose = "^3.3.0"
passlib = "^1.7.4"
asyncpg = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
